test/typecheck/errors/after-return.boa
visit(input, visitor {
    after _ -> return;
});
